@@ -53,11 +53,11 @@ public:
     /*!
       \brief accessible from global.
       \param target_player pointer to the target player
-      \param count_thr if player's posCount is smaller than this, agent will scan field.
+      \param count_thr if player's posCount is smaller than this value, agent simply turns neck to the ball.
      */
     explicit
     Neck_TurnToBallAndPlayer( const AbstractPlayerObject * target_player,
-                              const int count_thr = 0 )
+                              const int count_thr )
         : M_target_player( target_player )
         , M_count_thr( count_thr )
       { }
